@@ -254,7 +254,7 @@ int PAlterAtomState(float *v,char *expr,int read_only,
   PyObject *x_id1,*x_id2=NULL,*y_id1,*y_id2=NULL,*z_id1,*z_id2=NULL;
   char atype[7];
   dict = PyDict_New();
-  PyObject *flags_id1,*flags_id2=NULL;
+  PyObject *flags_id1=NULL,*flags_id2=NULL;
   int flags;
 
   if(at) {
@@ -321,12 +321,13 @@ int PAlterAtomState(float *v,char *expr,int read_only,
       f[0]=(float)PyFloat_AsDouble(x_id2);
       f[1]=(float)PyFloat_AsDouble(y_id2);
       f[2]=(float)PyFloat_AsDouble(z_id2);
-      if(flags_id1!=flags_id2) {
-        if(!PConvPyObjectToInt(flags_id2,&flags))
-          result=false;
-        else
-          at->flags = flags;
-      }
+      if(at) 
+        if(flags_id1!=flags_id2) {
+          if(!PConvPyObjectToInt(flags_id2,&flags))
+            result=false;
+          else
+            at->flags = flags;
+        }
       if(PyErr_Occurred()) {
         PyErr_Print();
         result=false;
